# final_crud_bootcamp_python

./: .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml
backend/database/: database.py
backend/models/: products.py
backend/schema/: products.py
