[tool.poetry]
name = "final-crud-bootcamp-python"
version = "0.1.0"
description = ""
authors = ["Júlio Bernardes <juliocd.bernardes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.32"
streamlit = "^1.38.0"
fastapi = {extras = ["standard"], version = "^0.112.2"}
psycopg2 = "^2.9.9"
pre-commit = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
